# robosuite_bimanual

./: .gitignore  AGENTS.md  CAMERA_SETUP.md  CLAUDE.md  FOLD_FIX_SUMMARY.md  README.md  augment_data.py  collect_piper_cloth_fold.py  collect_robosuite.py  collect_scripted.py  dataset.py  deploy_quad.py  diagnose_camera.py  evaluate.py  mirror_transform.py  pyproject.toml  requirements.txt  scripted_policy.py  test_camera.py  train_act.py  vision_encoder.py
.claude/skills/corner-centric-robotics/: SKILL.md
.claude/skills/corner-centric-robotics/references/: act_training.md  data_collection.md  mujoco.md
assets/cameras/: training_pair_birdview.xml  two_arm_birdview.xml
assets/cloth/: cloth_flex.xml
assets/mjcf/piper/: piper_description.xml
envs/: __init__.py  cloth_config.py  four_arm_cloth_fold.py  four_arm_env.py  four_arm_lift.py  two_arm_cloth_fold.py
robots/: __init__.py  piper.py
