[project]
name = "robosuite-bimanual"
version = "0.1.0"
description = "Bimanual robot data collection and ACT training using robosuite"
requires-python = ">=3.9"
dependencies = [
    "robosuite>=1.4.0",
    "numpy",
    "h5py",
    "torch>=2.0.0",
    "mujoco>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "tensorboard",
    "tqdm",
]
spacemouse = [
    "hidapi",
]

[dependency-groups]
dev = [
    "matplotlib",
    "tensorboard", 
    "tqdm",
]
